--- a/index.html
+++ b/index.html
@@ -6,8 +6,15 @@
     <title>MutchTime </title>
 <style>
     body {
-        fond-famile: times new roman; //Шрифт 
-        background-color: #000000;
+            font-family: Times New Roman, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #D3D3D3;
+        }
+    header {
+        color:#FFF;
+        padding: 20px 0;
+        text-align: center;
     }
     section {
         margin: 20px auto; //ШРИФТ 
