--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
         text-align: center;
     }
     section {
-        margin: 20px auto; //ШРИФТ 
+            margin: 20px auto;
             max-width: 800px;
-            background-color: #B23AEE;
+            background-color: #fff;
             padding: 20px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    }
+        }
     h1 {
         colore:#000000;
     }
