--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             font-family: Times New Roman, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #D3D3D3;
+            background-color: #FFFFFF; // фон 
         }
     header {
         color:#FFF;
