--- a/index.html
+++ b/index.html
@@ -3,20 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MutchTime </title>
-<style>
-    body {
+    <title>Мои три эссе</title>
+    <style>
+        body {
             font-family: Times New Roman, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #FFFFFF; // фон 
+            background-color: #D3D3D3;
         }
-    header {
-        color:#FFF;
-        padding: 20px 0;
-        text-align: center;
-    }
-    section {
+        header {
+            color: #fff;
+            padding: 20px 0;
+            text-align: center;
+        }
+        section {
             margin: 20px auto;
             max-width: 800px;
             background-color: #fff;
